--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,4 +4,5 @@ channels:
 dependencies:
   # You need the pangeo-notebook conda-forge package in your environment.yml for compatibility with pangeo cloud deployments
   - pangeo-notebook==2022.07.12
+  - pypotree
   # The rest of the packages are up to you!
